# elastic2d

./: .gitignore  CMakeLists.txt  Makefile  README.md  log4cxx.properties
cmake/: config.hpp.in
cmake/Modules/: FindCGAL.cmake
meshes/: cube.off  icosahedron.off  layers.off  layers_with_fracture.off  testInmLoader.out  tetrahedron.off
speedup/cmake/: speedup.txt
speedup/makefile/: speedup.txt
src/: main.cpp
src/launcher/: diploma_tasks.cpp  getopt_wrapper.hpp  main.cpp  ndi.hpp  skull.cpp  skull.hpp  tor.hpp
src/launcher/gcm_exe/: main.cpp
src/launcher/inverse_problem/: main.cpp
src/launcher/seismo/: main.cpp
src/lib/: AbstractFactory.hpp  DataBus.cpp  DataBus.hpp  Engine.cpp  Engine.hpp  GcmMatrices2D.cpp  GcmMatrices2D.hpp  GlobalVariables.cpp  GlobalVariables.hpp  Interpolator.cpp  Interpolator.hpp  MPISolver.cpp  MPISolver.hpp  Mesh.cpp  Mesh.hpp  Node.cpp  Node.hpp  PDEMatrices.cpp  PDEMatrices.hpp  RightHandSide.cpp  RightHandSide.hpp  SequenceSolver.cpp  SequenceSolver.hpp  Task.cpp  Task.hpp  config.hpp
src/lib/gcm_matrices/: Elastic1DGcmMatrices.cpp  Elastic1DGcmMatrices.hpp  GcmMatrices.cpp  GcmMatrices.hpp  IdealElastic1DGcmMatrices.cpp  IdealElastic1DGcmMatrices.hpp  IdealElastic2DGcmMatrices.cpp  IdealElastic2DGcmMatrices.hpp  IdealElastic3DGcmMatrices.cpp  IdealElastic3DGcmMatrices.hpp  IsotropicElastic2DGcmMatrices.cpp  IsotropicElastic2DGcmMatrices.hpp  IsotropicElastic3DGcmMatrices.cpp  IsotropicElastic3DGcmMatrices.hpp  OrthotropicElastic3DGcmMatrices.cpp  OrthotropicElastic3DGcmMatrices.hpp
src/lib/grid/: AbstractGrid.hpp  Cgal2DGrid.cpp  Cgal2DGrid.hpp  DefaultGrid.hpp  Grid.cpp  Grid.hpp  StructuredGrid.cpp  StructuredGrid.hpp
src/lib/interpolation/: Interpolator.cpp  Interpolator.hpp
src/lib/linal/: DiagonalMatrix.hpp  Linal.hpp  LinalRoutines.hpp  Matrix.hpp  Matrix22.cpp  Matrix22.hpp  Matrix33.cpp  Matrix33.hpp  Multiindex.hpp  RotationMatrix.cpp  RotationMatrix.hpp  Vector.hpp  Vector3.cpp  Vector3.hpp  basis.hpp  copy of Symmetry.hpp  determinants.hpp  functions.hpp  geometry.hpp  linal.hpp  linearSystems.hpp  operators.hpp
src/lib/materials/: IsotropicMaterial.cpp  IsotropicMaterial.hpp  OrthotropicMaterial.cpp
src/lib/mesh/: AbstractGrid.hpp  Cgal2DGrid.cpp  Cgal2DGrid.hpp  CubicGrid.cpp  CubicGrid.hpp  DataBus.hpp  DefaultMesh.hpp  Elements.hpp  Mesh.cpp  Mesh.hpp  MeshMover.hpp  StructuredGrid.hpp  UnstructuredGrid.hpp
src/lib/model/: IdealElastic1DModel.cpp  IdealElastic1DModel.hpp  IdealElastic2DModel.cpp  IdealElastic2DModel.hpp  IdealElastic3DModel.cpp  IdealElastic3DModel.hpp  Model.cpp  Model.hpp
src/lib/nodes/: IdealElastic1DNode.cpp  IdealElastic1DNode.hpp  IdealElastic2DNode.cpp  IdealElastic2DNode.hpp  IdealElastic3DNode.cpp  IdealElastic3DNode.hpp  Node.cpp  Node.hpp
src/lib/snapshot/: Snapshotter.cpp  Snapshotter.hpp  VtkTextStructuredSnapshotter.cpp  VtkTextStructuredSnapshotter.hpp
src/lib/solver/: MPISolver.cpp  MPISolver.hpp  MpiStructuredSolver.cpp  MpiStructuredSolver.hpp
src/lib/task/: InitialCondition.cpp  InitialCondition.hpp  Task.cpp  Task.hpp
src/lib/util/: Area.hpp  Assertion.hpp  Concepts.cpp  Concepts.hpp  DataBus.cpp  DataBus.hpp  Enum.cpp  Enum.hpp  Exception.cpp  Exception.hpp  FileUtils.hpp  GslUtils.cpp  GslUtils.hpp  Logging.hpp  Macros.hpp  MultiPrecision.hpp  StringUtils.hpp  Types.hpp  Utils.hpp  XmlUtils.hpp  mpreal.h
src/lib/variables/: VelocitySigmaVariables.cpp  VelocitySigmaVariables.hpp
src/libcgal3dmesher/: Cgal3DMesher.hpp  Cgal3DMesherWithEdges.cpp  Cgal3DMesherWithoutEdges.cpp
src/libcgalmesh/: Cgal2DMesher.cpp  Cgal2DMesher.hpp  Cgal3DMesher.hpp  Cgal3DMesherWithEdges.cpp  Cgal3DMesherWithoutEdges.cpp
src/libcgalmesher/: Cgal2DMesher.cpp  Cgal2DMesher.hpp  Cgal3DMesher.hpp  Cgal3DMesherWithEdges.cpp  Cgal3DMesherWithoutEdges.cpp
src/libgcm/engine/: AbstractEngine.cpp  AbstractEngine.hpp  EngineFactory.hpp  GlobalVariables.cpp  GlobalVariables.hpp
src/libgcm/grid/: AbstractGrid.hpp
src/libgcm/linal/: Matrix.hpp  Multiindex.hpp  Symmetry.hpp  basis.hpp  determinants.hpp  functions.hpp  geometry.hpp  linal.hpp  linearSystems.hpp  operators.hpp
src/libgcm/util/: Elements.hpp  Enum.cpp  Enum.hpp  FileUtils.hpp  StringUtils.hpp  Utils.hpp
src/ndi/: main.cpp  ndi.hpp
src/test/: TestInterpolator.cpp  TestMPI.cpp  TestMain.cpp  TestMatrix.cpp  TestMesh.cpp  TestNode.cpp  TestSolver.cpp  gcmMatrices.cpp  linal.cpp  testMPI.cpp
src/test/cgal/: TestCgal.cpp
src/test/sequence/: Demo.cpp  TestArea.cpp  TestAssertions.cpp  TestCgal2DGrid.cpp  TestCgal3DGrid.cpp  TestConcepts.cpp  TestCubicGrid.cpp  TestEngine.cpp  TestEnum.cpp  TestGcmMatrices.cpp  TestGridCharacteristicMethod.cpp  TestGslUtils.cpp  TestInmMeshLoader.cpp  TestInterpolator.cpp  TestLinal.cpp  TestLineWalkSearch2D.cpp  TestLineWalkSearch3D.cpp  TestMain.cpp  TestMultiPrecision.cpp  TestNodes.cpp  TestSimplexGcm.cpp  TestSimplexGrid.cpp  TestSimplexGrid2D.cpp  TestSimplexGrid3D.cpp  TestSimplexGridLineWalkSearch.cpp  TestSimplexGridThreadSafety.cpp  TestSolver.cpp  TestStringUtils.cpp  TestStructuredGrid.cpp  TestStructuredSolver.cpp  TestUtils.cpp  assertions.cpp  gcmMatrices.cpp  interpolator.cpp  linal.cpp  nodes.cpp  solver.cpp  structuredGrid.cpp
src/test/wrappers/: Wrappers.hpp
tools/: build.sh  convergence.txt  corrector_conditional.py  cut_inm_mesh.py  gnuplot-1d-binary.txt  gnuplot-line  gnuplot-seismo.txt  inverse_problem.sh  materials.ods  ndi.sh  old_ndi.sh  plotter  run.sh  seismo.sh  skull-render-2.py  skull-render.py  speed.sh  speedOMP.sh  speedup.sh  test.sh  timing.py  tmp.sh  uncrustify.cfg  wait_pid_and_run_other_build.sh
tools/convert/: ndi.sh  render.sh
tools/doxygen/: Doxyfile
tools/gnuplot/: gnuplot-seismo.txt  gnuplot-zaxis.txt  gpltmp  histo.txt  ndi  render.txt  renderSequence.txt  speedup.txt
tools/ndi/: all.sh  ndi.sh
tools/ndi/report/: report.aux  (+1 more)
tools/wxmaxima/: 2delasticMatrixesX.wxm  2delasticMatrixesY.wxm  3disotropicX.wxm  3disotropicY.wxm  orthotropic3d.wxm  orthotropic3dX.wxm  orthotropic3dY.wxm  orthotropic3dZ.wxm
wxmaxima/: test.wxm
(+252 files in other folders)
